# posidonius

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pos  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml  version-gate.yml
posidonius/: __init__.py  __main__.py  app.py  models.py
posidonius/engine/: __init__.py  event_log.py  optimizer.py  pipeline.py  runner.py  terminal.py  tmux.py
posidonius/static/: index.html
posidonius/tracking/: __init__.py  mlflow_tracker.py
tests/: __init__.py  test_app.py  test_mlflow_tracker.py  test_models.py  test_optimizer.py  test_pipeline.py  test_runner.py  test_terminal.py  test_tmux.py
