[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posidonius"
version = "0.1.1"
description = "Experiment dashboard for multi-agent coordination systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "mlflow>=2.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=7.0.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
posidonius = "posidonius.__main__:main"

[tool.setuptools.packages.find]
include = ["posidonius*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pydocstyle]
convention = "numpy"
add_ignore = ["D100", "D104", "D202", "D400"]

[tool.bandit]
skips = ["B101", "B104", "B311", "B404", "B603", "B607", "B108"]

[tool.coverage.run]
source = ["posidonius"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast, isolated unit test",
    "integration: Requires external services",
    "asyncio: Async test",
]
addopts = "-ra --strict-markers"
